tests/fixtures/errors/tag_not_exposed.z
plain: variant {
    a: null
    b: null
}

main: function is {
    v: plain.a
    print "\{v.tag}"
}
